--- a/frontend/src/controls/variables.scss
+++ b/frontend/src/controls/variables.scss
@@ -15,4 +15,4 @@ $header-height: 2em;
 
 $standard-spacing: 0.2em;
 
-$smaller-font-size: 0.85rem;
+$smaller-font-size: 0.75rem;
